Layout and spacing fixes

--- a/scss/fictoan/elements/_ff-inputs.scss
+++ b/scss/fictoan/elements/_ff-inputs.scss
@@ -7,30 +7,31 @@
 .row.ff-form-multi-unit,
 .ff-form-multi-unit .portion { margin-bottom: 0; }
 
+.ff-form-multi-unit > .portion:first-of-type { padding-left: 0; }
+.ff-form-multi-unit > .portion:last-of-type  { padding-right: 0; }
+
+@media all and (max-width : 600px) {
+    .row.ff-form-multi-unit { padding : 0; }
+}
+
 .ff-form-unit .portion {
     padding-left: 0;
     padding-right: 0;
 }
 
 @media all and (max-width : 600px) {
-
     .row.ff-form-multi-unit:not([class*='-mobile']) .portion:first-of-type,
     .row.ff-form-multi-unit:not([class*='-mobile']) .portion:last-of-type { padding: 0; }
-
 }
 
 @media all and (min-width : 601px) and (max-width : 900px) {
-
     .row.ff-form-multi-unit:not([class*='tab-pt']) .portion:first-of-type,
     .row.ff-form-multi-unit:not([class*='tab-pt']) .portion:last-of-type { padding: 0; }
-
 }
 
 @media all and (min-width : 901px) and (max-width : 1200px) {
-
     .row.ff-form-multi-unit:not([class*='tab-ls']) .portion:first-of-type,
     .row.ff-form-multi-unit:not([class*='tab-ls']) .portion:last-of-type { padding: 0; }
-
 }
 
 .ff-form-unit > label {
